# zed-context-cleaner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
python/: analyze.py  zed_cleanup.py  zed_thread.py
src/: app.rs  cleaner.rs  db.rs  main.rs  types.rs
